# 2025-tfm-miguel

./: README.md
Bno055/: Cargo.toml
GPT/: Cargo.toml
GPT/src/: main.rs
PD-RW/: Cargo.toml
PD-RW-no-std/: Cargo.toml
PD-RW-no-std/src/: controller.rs  main.rs  plotters.rs  rw.rs  satellite_dynamics.rs  transducer.rs  types.rs
PD-RW/src/: discrete_time_model.rs  main.rs  plotters.rs
PD-RW/src/discrete_time_model/: controller.rs  rw.rs  satellite_dynamics.rs  transducer.rs  types.rs
