[package]
edition      = "2024"
name         = "Bno055"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "Bno055"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32c6", "unstable"] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }

critical-section = "1.2.0"
esp-println = { version = "0.16.1", features = ["esp32c6", "log-04"] }
embassy-executor = { version = "0.9.1", features = ["arch-riscv32"] }
esp-rtos = { version = "0.2.0", features = ["embassy", "esp32c6"] }
embassy-time = { version = "0.5.0", default-features = false }
esp-backtrace = { version = "0.18.1", features = ["panic-handler", "esp32c6", "println"] }
embassy-sync = "0.7.2"
bno055 = "=0.4.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
